--- a/bindex.html
+++ b/bindex.html
@@ -55,7 +55,7 @@ https://templatemo.com/tm-563-seo-dream
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              <h4>UG Softwares <img src="assets/images/logo-icon.png" alt=""></h4>
+              <h4>UG Softwares <img src="assets/images/logo456.png" alt=""></h4>
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
