modified:   bindex.html

--- a/bindex.html
+++ b/bindex.html
@@ -62,7 +62,7 @@ https://templatemo.com/tm-563-seo-dream
             <ul class="nav">
               <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
               <li class="scroll-to-section"><a href="#features">Features</a></li>
-              <li class="scroll-to-section"><a href="#about">About Us</a></li>
+              <li class="scroll-to-section"><a href="#about">About Me</a></li>
               <li class="scroll-to-section"><a href="#services">Services</a></li>
               <li class="scroll-to-section"><a href="#portfolio">Portfolio</a></li>
               <li class="scroll-to-section"><a href="#contact">Contact Me</a></li> 
@@ -168,7 +168,7 @@ https://templatemo.com/tm-563-seo-dream
                   <div class="icon"></div>
                   <h4>Result</h4>
                   <div class="line-dec"></div>
-                  <p>Finnaly your app/software is ready!!!.</p>
+                  <p>Finally your app/software is ready!!!.</p>
                 </div>
               </div>
             </div>
@@ -283,7 +283,7 @@ https://templatemo.com/tm-563-seo-dream
               </div>
             </div>
           </div>
-          <p><b>Ultimate Geist Softwares</b> is a free software &AMP; and app creating company any app for their reqirements will be created here even ready templates are avalabel.</p>
+          <p><b>Ultimate Geist Softwares</b> is a free and paid software &AMP; and app creating company any app for their reqirements will be created here even ready templates are avalabel.</p>
           <div class="main-green-button"><a href="#">Discover company</a></div>
         </div>
       </div>
@@ -296,7 +296,7 @@ https://templatemo.com/tm-563-seo-dream
         <div class="col-lg-6 offset-lg-3">
           <div class="section-heading wow bounceIn" data-wow-duration="1s" data-wow-delay="0.2s">
             <h6>Our Services</h6>
-            <h2>Discover What I Do To Our <em>Clients</em></h2>
+            <h2>Discover What I Do To My <em>Clients</em></h2>
           </div>
         </div>
       </div>
