--- a/bindex.html
+++ b/bindex.html
@@ -513,7 +513,7 @@ https://templatemo.com/tm-563-seo-dream
                   </div>
                   <div class="col-lg-12">
                     <fieldset>
-                      <a href="#"><button type="submit" id="form-submit" class="main-button ">Send Message Now</button></a>
+                      <a href="https://mail.google.com/mail/#inbox?compose=CllgCJTNHMptmgFJqSpdXrPwplQTCKXDbNSDxdlgWfDSMTwqLcCKzWMMVkCscdrFNKXFQqbdsXV"><button type="submit" id="form-submit" class="main-button ">Send Message Now</button></a>
                     </fieldset>
                   </div>
                 </div>
