modified:   nonp.html

--- a/nonp.html
+++ b/nonp.html
@@ -64,7 +64,7 @@
     </div>
     <div class="right">
       <div class="topic">Programing Is My Passion</div>
-      <p>Created My first program at age 9 .Nothing,Just a digital Clock using Python.I have no idea why i choose python.There My journy Starts.Started To learn python,creating programs.Then I moved to Game Devlopement i didnt have much intrest in that so i droped it and started a Youtube Channel <a href="https://www.youtube.com/channel/UCEizBJS_GdHCZKw1o_0TBOQ/featured">Click Here</a> to see my channel.And now running a company <b>Ultimate Geist Softwares.</b> I create Softwares for peoples uses.Thats, about me.</main></p>
+      <p>Created My first program at age 9 .Nothing,Just a digital Clock using Python.I have no idea why i choose python.There My journey Starts.Started To learn python,creating programs.Then I moved to Game Devlopement i didnt have much intrest in that so i droped it and started a Youtube Channel <a href="https://www.youtube.com/channel/UCEizBJS_GdHCZKw1o_0TBOQ/featured">Click Here</a> to see my channel.And now running a company <b>Ultimate Geist Softwares.</b> I create Softwares for peoples uses.Thats, about me.</main></p>
       <div class="button">
         <button><a href="bindex.html">My Company</a></button>
       </div>
@@ -81,9 +81,9 @@
     <div class="skills-details">
       <div class="text">
         <div class="topic">Skills Reflects Our Knowledge</div>
-        <p>Age - 12 Professnal Python programer partial at Game Devlopment and basic at Html,Gamer,Owner and Ceo of <b>Ultimate Geist Softwares</b>,Music Creator,Youtuber and Music Creator.</p>
+        <p>Age - 13 Professnal Python programer partial at Game Devlopment and basic at Html,Gamer,Owner and Ceo of <b>Ultimate Geist Softwares</b>,Music Creator,Youtuber and Music Creator.</p>
         <div class="experience">
-          <div class="num">3</div>
+          <div class="num">4</div>
           <div class="exp">Years Of <br> Experience</div>
         </div>
       </div>
@@ -141,21 +141,21 @@
            <i class="fab fa-music"></i>
        </div>
        <div class="topic">Music Creator</div>
-       <p>I have a basic Knowledge of making Music i make beat,trap Musics thats It.</p>
+       <p>I have a basic knowledge of making Music I make beat,trap Musics thats It.</p>
      </div>
        <div class="box">
          <div class="icon">
            <i class="fas fa-youtube"></i>
        </div>
        <div class="topic">Youtuber</div>
-       <p>Created at August 13 nothing special in that I tryed hard to improve it but at last 2 subs unsubscribed I did my best but no use.I tryed to get subs on my own I never asked anyone to sub exept my parents and friends now my half subscribers are people from other states or country.I am happy with this because I want something like this.Hope you watching will sub me if you want sub <a href="https://www.youtube.com/channel/UCEizBJS_GdHCZKw1o_0TBOQ/featured"><b>Click Here</b></a></p>
+       <p>Created at August 13 nothing special in that I tried hard to improve it but at last 2 subs unsubscribed I did my best but no use.I tried to get subs on my own I never asked anyone to sub exept my parents and friends now my half subscribers are people from other states or country.I am happy with this because I want something like this.Hope you watching will sub me if you want sub <a href="https://www.youtube.com/channel/UCEizBJS_GdHCZKw1o_0TBOQ/featured"><b>Click Here</b></a></p>
      </div>
        <div class="box">
          <div class="icon">
            <i class="fas fa-tablet-alt"></i>
        </div>
        <div class="topic">App Devlopment</div>
-       <p>I even Devlope apps at python even Softwares.Apps and software devlopement at Ultimate Geist Softwares</p>
+       <p>I even Devlope apps and Softwares at python.Apps and software devlopement at Ultimate Geist Softwares</p>
      </div>
    </div>
    </div>
