modified:   nonp.html

--- a/nonp.html
+++ b/nonp.html
@@ -45,7 +45,7 @@
      <div class="text">
        <div class="text-one">Hello,</div>
        <div class="text-two">I'm Ak</div>
-       <div class="text-three">Python,App and Game Devloper,Gamer,Music Creator,Youtuber,Owner/Ceo of Ultimate Geist Softwares</div>
+       <div class="text-three">Python,App and Game Devloper,Gamer,Music Creator,Chess player,Youtuber,Owner/Ceo of Ultimate Geist Softwares</div>
        <div class="text-four"><b>From TamilNadu</b></div>
      </div>
      <div class="button">
