--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> Welcome!!! </title>
+    <title> Welcome! </title>
     <!----css custom file link-->
     <link rel="stylesheet" href="style.css">
     <!---Fontawesome CDN link----->
